backend-deployment/backend-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
  selector:
    app: back-end
  type: NodePort
  ports:
    - name: https
      protocol: TCP
      port: 5000       # Expose on HTTPS
      targetPort: 5000  # Forward traffic to backend app
